--- a/notebooks/01_data_collection_and_cleaning.ipynb
+++ b/notebooks/01_data_collection_and_cleaning.ipynb
@@ -24,20 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YF.download() has changed argument auto_adjust default to True\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -45,13 +40,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved AAPL\n"
+      "AAPL saved.\n",
+      "MSFT saved.\n",
+      "JPM saved.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -59,21 +57,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved MSFT\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved JPM\n"
+      "BAC saved.\n",
+      "XOM saved.\n"
      ]
     },
     {
@@ -87,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved XOM\n"
+      "CVX saved.\n"
      ]
     },
     {
@@ -100,18 +85,16 @@
    ],
    "source": [
     "import yfinance as yf\n",
-    "import pandas as pd\n",
     "import os\n",
+    "import pandas as pd\n",
     "\n",
+    "tickers = ['AAPL', 'MSFT', 'JPM', 'BAC', 'XOM', 'CVX']\n",
     "os.makedirs('../data/raw', exist_ok=True)\n",
     "\n",
-    "# Example tickers\n",
-    "tickers = ['AAPL', 'MSFT', 'JPM', 'XOM']\n",
-    "\n",
     "for ticker in tickers:\n",
-    "    data = yf.download(ticker, start='2018-01-01', end='2024-12-31')\n",
-    "    data.to_csv(f'../data/raw/{ticker}_raw.csv')\n",
-    "    print(f'Saved {ticker}')"
+    "    df = yf.download(ticker, start='2018-01-01', end='2024-12-31')\n",
+    "    df.to_csv(f'../data/raw/{ticker}_raw.csv', index_label='Date')\n",
+    "    print(f\"{ticker} saved.\")\n"
    ]
   }
  ],
