--- a/notebooks/01_data_collection_and_cleaning.ipynb
+++ b/notebooks/01_data_collection_and_cleaning.ipynb
@@ -24,15 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -40,8 +45,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAPL saved.\n",
-      "MSFT saved.\n",
+      "AAPL saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSFT saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "JPM saved.\n"
      ]
     },
@@ -49,7 +80,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
@@ -57,7 +87,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BAC saved.\n",
+      "BAC saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "XOM saved.\n"
      ]
     },
@@ -100,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -114,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
