--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -24,9 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -43,16 +59,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
       "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_97950/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n"
      ]
