--- a/notebooks/01_data_collection_and_cleaning.ipynb
+++ b/notebooks/01_data_collection_and_cleaning.ipynb
@@ -24,27 +24,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YF.download() has changed argument auto_adjust default to True\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed\n",
-      "[*********************100%***********************]  1 of 1 completed"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "AAPL saved.\n",
-      "MSFT saved.\n",
-      "JPM saved.\n",
+      "AAPL saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSFT saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JPM saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "BAC saved.\n"
      ]
     },
@@ -52,7 +94,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XOM saved.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[*********************100%***********************]  1 of 1 completed"
      ]
     },
@@ -60,7 +115,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XOM saved.\n",
       "CVX saved.\n"
      ]
     },
