changes to 03 and 04
Made 03 all positve R^2, 04 is almost there only msft and jpm are negative someone make changes to that and make sure to change the architecture on 05 so it matches that of 03 and 04 when comparing

--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -43,17 +43,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n",
-      "C:\\Users\\redfl\\AppData\\Local\\Temp\\ipykernel_29340\\3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/var/folders/t1/dn02mwbj2470p7qc91_h3c1w0000gn/T/ipykernel_28559/3209643988.py:19: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df = pd.read_csv(f'../data/raw/{ticker}_raw.csv', index_col=0, parse_dates=True)\n"
      ]
     }
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
